# django-utils

./: .gitignore  LICENSE  pyproject.toml  setup.py
django_utils/templatetags/: django_utils.py
